app/src/db/repositories/niveau_liste/snapshots/anki_sentences__db__repositories__niveau_liste__niveau_liste_test__test_niveau_liste_repo__bulk_upsert__[NiveauListe::bulk_upsert] - after insert.snap
---
source: app/src/db/repositories/niveau_liste/niveau_liste_test.rs
expression: res.snapshot()
---
[
    NiveauListeSnapshot {
        id: 0,
        niveau: "A1",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    NiveauListeSnapshot {
        id: 1,
        niveau: "A2",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    NiveauListeSnapshot {
        id: 2,
        niveau: "B1",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    NiveauListeSnapshot {
        id: 3,
        niveau: "B2",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    NiveauListeSnapshot {
        id: 4,
        niveau: "C1",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    NiveauListeSnapshot {
        id: 5,
        niveau: "C2",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
