app/src/db/repositories/niveau_liste/snapshots/anki_sentences__db__repositories__niveau_liste__niveau_liste_test__test_niveau_liste_repo__bulk_upsert__[NiveauListe::bulk_upsert] - after update.snap
---
source: app/src/db/repositories/niveau_liste/niveau_liste_test.rs
expression: res.snapshot()
---
[
    NiveauListeSnapshot {
        id: 0,
        niveau: "A1 test",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    NiveauListeSnapshot {
        id: 1,
        niveau: "A2 test",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    NiveauListeSnapshot {
        id: 2,
        niveau: "B1 test",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
