app/src/db/repositories/niveau_liste/snapshots/anki_sentences__db__repositories__niveau_liste__niveau_liste_test__test_niveau_liste_repo__bulk_upsert__[NiveauListe::bulk_upsert] - empty.snap
---
source: app/src/db/repositories/niveau_liste/niveau_liste_test.rs
expression: res.snapshot()
---
[]
